--- a/scss/components/variables.scss
+++ b/scss/components/variables.scss
@@ -6,3 +6,13 @@ $color-light-gray: #f6f6f6;
 $color-blue: #0071eb;
 $color-green: #65c350;
 $color-red: #f73637;
+
+//Typography
+$font-family-bold: "Manrope Bold";
+$font-family-light: "Manrope Light";
+$font-family-thin: "Manrope Thin";
+$font-family-medium: "Manrope Medium";
+$font-family-regular: "Manrope Regular";
+$font-family-semibold: "Manrope Semibold";
+
+$line-height: 20px;
