--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,10 @@ $prefix: "mo-";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/utilities/api";
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
 
 // Reset SCSS
 @import '../node_modules/scss-reset/_reset.scss';
@@ -28,3 +31,53 @@ $prefix: "mo-";
 @import "components/header";
 @import "components/footer";
 @import "components/travel-card";
+@import "components/main-page";
+
+@import "base/buttons";
+@import "base/base";
+
+body {
+  background: $color-light-gray;
+  font-family: $font-family-regular !important;
+  font-weight: 400;
+  letter-spacing: 0;
+}
+
+h1 {
+  font-size: 30px;
+  margin-bottom: 0;
+}
+
+h3 {
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+h4 {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+h5 {
+  font-size: 12px;
+  margin-bottom: 0;
+}
+
+h6 {
+  font-size: 10px;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 20px !important;
+  }
+
+  h3 {
+    font-size: 12px !important;
+  }
+
+  h5 {
+    font-size: 10px !important;
+  }
+}
