--- a/scss/components/variables.scss
+++ b/scss/components/variables.scss
@@ -6,3 +6,7 @@ $color-light-gray: #f6f6f6;
 $color-blue: #0071eb;
 $color-green: #65c350;
 $color-red: #f73637;
+
+* {
+    font-family: "Manrope";
+}
