--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -35,7 +35,38 @@
     padding: 0;
 }
 
+.opacity-15 {
+    opacity: 0.15 !important;
+}
+
+.opacity-40 {
+    opacity: 0.4 !important;
+}
+
+.opacity-80 {
+    opacity: 0.8 !important;
+}
+
+.mb-6 {
+    margin-bottom: 5rem !important;
+}
+
+.fs-7 {
+    font-size: 0.9rem !important;
+}
+
 //----------------------------------------------------
+.bold {
+    font-family: "Manrope bold";
+}
+
+.semibold {
+    font-family: "Manrope semibold";
+}
+
+.thin {
+    font-family: "Manrope thin";
+}
 
 body {
     background-color: $color-light-gray;
@@ -50,7 +81,8 @@ main {
 .archive-excursions,
 .moderation-excursions,
 .draft-excursions,
-.current-excursion {
+.current-excursion,
+.accordion__content {
     display: none;
 }
 
@@ -59,12 +91,14 @@ main {
 }
 
 h1 {
-    font-family: "Manrope bold";
-    font-size: 1.3em;
+    font-size: 1.5em;
 }
 
 h2 {
-    color: rgba($color-black, 0.4);
+    font-size: 1.3rem;
+}
+
+h3 {
     letter-spacing: 3px;
     font-size: 0.7rem;
 }
@@ -90,7 +124,7 @@ a:hover {
     color: $color-black;
 }
 
-.green {
+.bg-green {
     background-color: $color-green;
     color: $color-white;
 }
@@ -110,6 +144,12 @@ a:hover {
     height: 20px;
 }
 
+.big-icon {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
 .active,
 .active>* {
     background-color: $color-blue;
@@ -118,7 +158,7 @@ a:hover {
     z-index: 1;
 }
 
-.expand-blue {
+.blue {
     color: $color-blue;
 }
 
@@ -129,12 +169,11 @@ a:hover {
 
 .excursion {}
 
-.excursion__splitted {
+.splitted {
     position: relative;
-
 }
 
-.excursion__splitted::before {
+.splitted::before {
     content: '';
     position: absolute;
     top: 0;
@@ -160,10 +199,6 @@ a:hover {
     filter: gray;
 }
 
-.excursion__description {
-    color: rgba($color-black, 0.8);
-}
-
 .excursion__type,
 .excursion__number,
 .excursion__rating,
@@ -174,7 +209,6 @@ a:hover {
 
 .excursion__number,
 .excursion__menu {
-    font-family: "Manrope bold";
     letter-spacing: 3px;
 }
 
@@ -183,9 +217,7 @@ a:hover {
     background-color: $color-blue;
 }
 
-.excursion__rating {
-    color: rgba($color-black, 0.4);
-}
+.excursion__rating {}
 
 .excursion__status {
     color: $color-green;
@@ -210,3 +242,106 @@ a:hover {
     background-color: rgba($color-red, 0.07);
 }
 
+.red-dot {
+    position: relative;
+}
+
+.red-dot::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: calc(50% - 3px);
+    width: 6px;
+    height: 6px;
+    background-color: $color-red;
+    border-radius: 50%;
+}
+
+.sms {
+    position: relative;
+}
+
+.sms::before {
+    content: '';
+    position: absolute;
+    left: calc(100% - 34px);
+    top: -1px;
+    width: 7px;
+    height: 7px;
+    background-color: $color-red;
+    border-radius: 50%;
+}
+
+.expand-img>.icon {
+    transition: 0.3s;
+    transform: rotate(180deg);
+}
+
+.accordion__item.visible>.accordion__content {
+    display: block;
+}
+
+.accordion__item.visible .expand-img>.icon {
+    transform: rotate(0deg);
+}
+
+.reviews__line {
+    height: 2px;
+    background-color: rgb(240, 240, 240);
+    position: relative;
+}
+
+#review-1 .reviews__line::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -1px;
+    width: 0.7rem;
+    height: 4px;
+    background-color: $color-blue;
+    border-radius: 6px;
+}
+
+#review-2 .reviews__line::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -1px;
+    width: 0;
+    height: 4px;
+    background-color: $color-blue;
+    border-radius: 6px;
+}
+
+#review-3 .reviews__line::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -1px;
+    width: 1.5rem;
+    height: 4px;
+    background-color: $color-blue;
+    border-radius: 6px;
+}
+
+#review-4 .reviews__line::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -1px;
+    width: 7rem;
+    height: 4px;
+    background-color: $color-blue;
+    border-radius: 6px;
+}
+
+#review-5 .reviews__line::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -1px;
+    width: 40rem;
+    height: 4px;
+    background-color: $color-blue;
+    border-radius: 6px;
+}
