--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,5 +1,18 @@
+@import "../components/variables";
+
 .dt-page-header {
   background: url("/dist/img/header-bg.png") no-repeat;
+
+  & > * {
+    color: white;
+    font-family: $font-family-regular;
+  }
+
+  p.dt-page__title {
+    font-size: 46px;
+    font-family: $font-family-bold;
+  }
+
   &__actions {
     //padding: 25px 0 25px 40px;
     border-bottom: 1px solid $color-light-gray;
@@ -8,7 +21,7 @@
       padding-left: 40px;
     }
 
-    & .dt-links__list{
+    & .dt-links__list {
       & li:not(:last-child) {
         padding-right: 40px;
       }
@@ -18,7 +31,7 @@
       & .dt-btn-entry {
         padding: 22px 32px;
         border-left: 1px solid $color-light-gray;
-       // border-right: 1px solid $color-light-gray;
+        // border-right: 1px solid $color-light-gray;
 
         &:last-child {
           border-right: none;
