--- a/scss/components/variables.scss
+++ b/scss/components/variables.scss
@@ -2,6 +2,7 @@
 
 $color-white: #ffffff;
 $color-black: #222425;
+$color-light-black: rgba(34, 36, 37, 0.4);
 $color-light-gray: #f6f6f6;
 $color-blue: #0071eb;
 $color-green: #65c350;
