--- a/scss/base/buttons.scss
+++ b/scss/base/buttons.scss
@@ -41,7 +41,7 @@
     span {
       font-size: 14px;
       font-family: $font-family-bold;
-      color: $color-white;
+      color: $color-white !important;
     }
 
     &:hover {
@@ -65,6 +65,17 @@
 
     &:hover {
       color: $color-blue;
+    }
+  }
+
+  &-text-red {
+    cursor: pointer;
+    color: $color-red;
+    letter-spacing: 3px;
+    border-bottom: 1px solid rgba(247, 54, 55, 0.07);
+
+    &:hover {
+      border-bottom: 1px solid $color-red;
     }
   }
 
