--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,10 +33,13 @@ $prefix: "mo-";
 @import "components/travel-card";
 @import "components/main-page";
 @import "components/modal";
+@import "components/excursions";
 
 @import "base/buttons";
 @import "base/inputs";
 @import "base/checkbox";
+@import "base/switch";
+@import "base/tabs";
 @import "base/base";
 
 body {
@@ -70,6 +73,19 @@ h5 {
 h6 {
   font-size: 10px;
   margin-bottom: 0;
+}
+
+.dt-page {
+  &__breadcrumbs {
+    padding-top: 40px;
+    padding-bottom: 80px;
+    & .breadcrumb-item > a {
+      color: $color-light-black !important;
+      text-decoration: none;
+      text-transform: uppercase;
+      white-space: nowrap;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
