--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -51,8 +51,34 @@
     opacity: 0.8 !important;
 }
 
+.m-6 {
+    margin: 5rem !important;
+}
+
+.mx-6 {
+    margin-left: 5rem !important;
+    margin-right: 5rem !important;
+}
+
+.my-6 {
+    margin-top: 5rem !important;
+    margin-bottom: 5rem !important;
+}
+
+.mt-6 {
+    margin-top: 5rem !important;
+}
+
 .mb-6 {
     margin-bottom: 5rem !important;
+}
+
+.me-6 {
+    margin-right: 5rem !important;
+}
+
+.ms-6 {
+    margin-left: 5rem !important;
 }
 
 .m-2rem {
@@ -115,10 +141,6 @@
     padding-left: 2rem !important;
 }
 
-.fs-7 {
-    font-size: 0.9rem !important;
-}
-
 input,
 select {
     height: 70px;
@@ -166,12 +188,18 @@ main {
 .draft-excursions,
 .current-excursion,
 .accordion__content,
-.add-excursion {
+.add-excursion,
+.my-objects,
+.active-objects,
+.deleted-objects,
+.add-object,
+.transactions,
+.calendar {
     display: none;
 }
 
 .visible {
-    display: initial;
+    display: initial !important;
 }
 
 .hide {
@@ -259,6 +287,16 @@ h3 {
     background-color: rgba($color-red, 0.07);
 }
 
+.blue-underline::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba($color-blue, 0.07);
+}
+
 .black-underline::after {
     content: '';
     position: absolute;
@@ -274,6 +312,17 @@ button,
 span,
 p {
     font-size: 0.8rem;
+}
+
+.button {
+    height: 50px;
+}
+
+.short-descrtiption {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 a {
@@ -300,6 +349,11 @@ a:hover {
     width: 50px;
     height: 50px;
     object-fit: cover;
+}
+
+.round-icon {
+    width: 40px;
+    height: 40px;
 }
 
 .active,
@@ -331,14 +385,11 @@ a:hover {
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: $color-light-gray;
+    background-color: rgba($color-black, 0.1);
 }
 
-.excursion__image {
-    width: 100%;
-    height: 100%;
+.cover {
     object-fit: cover;
-    border-radius: 0 0.375rem 0.375rem 0;
 }
 
 .archived {
@@ -481,6 +532,11 @@ a:hover {
     height: 12px;
 }
 
+.img {
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .add-main-photo {
     width: 180px;
     height: 100px;
@@ -491,14 +547,23 @@ a:hover {
     width: 100px;
     height: 100px;
     object-fit: cover;
-    transition: 0.3s;
 }
 
-.add-additional-photo:hover {
-    filter: brightness(40%);
+.add-main-photo,
+.add-additional-photo {
+    background-image: url("./img/icons/add_FILL0_wght600_GRAD0_opsz48.svg");
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: 50%;
 }
 
-.add-additional-photo:hover~.delete {
+.add-main-photo:hover>.img,
+.add-additional-photo:hover>.img {
+    filter: brightness(50%);
+}
+
+.add-main-photo:hover>.delete,
+.add-additional-photo:hover>.delete {
     display: flex;
 }
 
@@ -509,6 +574,8 @@ a:hover {
     display: none;
     top: calc(50% - 16px);
     left: calc(50% - 16px);
+    z-index: 1;
+    cursor: pointer;
 }
 
 .checkbox>input[type=checkbox] {
@@ -563,14 +630,18 @@ input[type=date]::-webkit-calendar-picker-indicator {
     background-size: 20px;
 }
 
-.add-exc-accept::before {
-    background-color: rgba($color-black, 0.1);
-}
-
 .plus-icon {
     position: absolute;
     width: 40px;
     height: 40px;
     top: calc(25% + 20px);
     right: 35%;
+}
+
+.object {
+    width: 340px;
+}
+
+.page {
+    width: 50px;
 }
