Макет для ПК Кабинет гида готов

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,3 +28,4 @@ $prefix: "mo-";
 @import "components/header";
 @import "components/footer";
 @import "components/travel-card";
+@import "components/main";
