--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -236,6 +236,7 @@ h3 {
 .default {
     background-color: $color-white;
     color: $color-black;
+    fill: $color-black;
 }
 
 .bg-green {
@@ -250,14 +251,22 @@ h3 {
 
 .blue {
     color: $color-blue;
+    fill: $color-blue;
 }
 
 .red {
     color: $color-red;
+    fill: $color-red;
 }
 
 .green {
     color: $color-green;
+    fill: $color-green;
+}
+
+.white {
+    color: $color-white;
+    fill: $color-white;
 }
 
 a,
@@ -276,6 +285,10 @@ a:hover {
     color: $color-black;
 }
 
+svg {
+    fill: $color-blue;
+}
+
 //----------------------------------------------------
 .my-excursions,
 .active-excursions,
@@ -290,24 +303,9 @@ a:hover {
 .deleted-objects,
 .add-object,
 .transactions,
-.calendar {
+.calendar,
+.settings {
     display: none;
-}
-
-.arrow {
-    background-image: url("./img/icons/expand_more_FILL0_wght600_GRAD0_opsz48.svg");
-}
-
-.location {
-    background-image: url("./img/icons/location_on_FILL0_wght600_GRAD0_opsz48.svg");
-}
-
-.person {
-    background-image: url("./img/icons/person_filled_FILL0_wght500_GRAD0_opsz48.svg");
-    object-fit: cover;
-    background-repeat: no-repeat;
-    background-position: top 50% right 1rem;
-    background-size: 20px;
 }
 
 .red-underline::after {
@@ -379,16 +377,12 @@ a:hover {
     color: $color-white;
     box-shadow: 0 10px 30px 7px rgba($color-blue, 0.3);
     z-index: 1;
+    fill: $color-white;
 }
 
 .inactive {
     background-color: $color-white;
     color: rgba($color-black, 0.1);
-}
-
-.star {
-    width: 16px;
-    height: 16px;
 }
 
 .splitted {
@@ -444,7 +438,7 @@ a:hover {
     border-radius: 50%;
 }
 
-.expand-img>.icon {
+.expand-img>svg {
     transition: 0.3s;
     transform: rotate(180deg);
 }
@@ -453,7 +447,7 @@ a:hover {
     display: block;
 }
 
-.accordion__item.visible .expand-img>.icon {
+.accordion__item.visible .expand-img>svg {
     transform: rotate(0deg);
 }
 
@@ -544,11 +538,6 @@ a:hover {
     object-fit: cover;
 }
 
-.question-mark {
-    width: 12px;
-    height: 12px;
-}
-
 .img {
     transition: 0.3s;
     cursor: pointer;
@@ -564,14 +553,6 @@ a:hover {
     width: 100px;
     height: 100px;
     object-fit: cover;
-}
-
-.add-main-photo,
-.add-additional-photo {
-    background-image: url("./img/icons/add_FILL0_wght600_GRAD0_opsz48.svg");
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 
 .add-main-photo:hover>.img,
@@ -641,18 +622,13 @@ a:hover {
 }
 
 input[type=date]::-webkit-calendar-picker-indicator {
-    background-image: url("./img/icons/calendar_month_FILL0_wght600_GRAD0_opsz48.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 20px;
+    display: none;
 }
 
 .plus-icon {
-    position: absolute;
     width: 40px;
     height: 40px;
-    top: calc(25% + 20px);
-    right: 35%;
+    margin-right: -1rem;
 }
 
 .object {
