--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -697,12 +697,12 @@ input[type=date]::-webkit-calendar-picker-indicator {
     background-color: rgba($color-blue, 0.03) !important;
 }
 
-.unread>div>.messages-head__text,
-.unread>.messages-head__unread {
+.unread .messages-head__text,
+.unread .messages-head__unread {
     display: -webkit-box !important;
 }
 
-.unread>div>.messages-head__date {
+.unread .messages-head__date {
     display: none !important;
 }
 
@@ -710,17 +710,17 @@ input[type=date]::-webkit-calendar-picker-indicator {
     background-color: rgba($color-blue, 0.8);
 }
 
-.current>div>span,
-.current>div>p {
+.current span,
+.current p {
     color: $color-white;
     font-family: "Manrope regular";
 }
 
-.current>.icon-wrap>.round-icon {
+.current .round-icon {
     background-color: rgba($color-white, 0.07) !important;
 }
 
-.current>.icon-wrap>.round-icon>svg {
+.current svg {
     fill: $color-white;
     opacity: 1 !important;
 }
@@ -788,4 +788,81 @@ input[type=date]::-webkit-calendar-picker-indicator {
 .benefits__item {
     outline: 1px solid rgba($color-black, 0.1);
     background-color: $color-light-gray;
+}
+
+//---------------------------------------------------
+
+.slider {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	height: 530px;
+	user-select: none;
+	touch-action: pan-y;
+    overflow: hidden;
+}
+
+.slider img {
+	pointer-events: none;
+}
+
+.slider__list {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.slider__list.grab {
+	cursor: grab;
+}
+
+.slider__list.grabbing {
+	cursor: grabbing;
+}
+
+.slider__track {
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+.slide {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	justify-content: space-evenly;
+	flex-shrink: 0;
+}
+
+.slider__arrows {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.slider__next,
+.slider__prev {
+	position: absolute;
+	top: calc(50% - 25px);
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+}
+
+.slider__next {
+	right: 20px;
+}
+
+.slider__prev {
+	left: 20px;
+}
+
+.next.disabled,
+.prev.disabled {
+	opacity: .25;
+	pointer-events: none;
 }
