--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -170,7 +170,7 @@ select {
     background-color: rgba($color-blue, 0.07);
 }
 
-.bg-light-blue>svg {
+.bg-light-blue svg {
     fill: $color-blue;
 }
 
@@ -194,12 +194,72 @@ main {
     margin: 40px 0 80px;
 }
 
+.hide {
+    display: none !important;
+}
+
+.hide-sm {
+    @media (min-width: 576px) {
+        display: none !important;
+    }
+}
+
+.hide-md {
+    @media (min-width: 768px) {
+        display: none !important;
+    }
+}
+
+.hide-lg {
+    @media (min-width: 992px) {
+        display: none !important;
+    }
+}
+
+.hide-xl {
+    @media (min-width: 1200px) {
+        display: none !important;
+    }
+}
+
+.hide-xxl {
+    @media (min-width: 1400px) {
+        display: none !important;
+    }
+}
+
 .visible {
     display: initial !important;
 }
 
-.hide {
-    display: none !important;
+.visible-sm {
+    @media (min-width: 576px) {
+        display: initial !important;
+    }
+}
+
+.visible-md {
+    @media (min-width: 768px) {
+        display: initial !important;
+    }
+}
+
+.visible-lg {
+    @media (min-width: 992px) {
+        display: initial !important;
+    }
+}
+
+.visible-xl {
+    @media (min-width: 1200px) {
+        display: initial !important;
+    }
+}
+
+.visible-xxl {
+    @media (min-width: 1400px) {
+        display: initial !important;
+    }
 }
 
 h1 {
@@ -302,11 +362,11 @@ svg {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 40%;
-}
+    text-align: center;
 
-.img-250 {
-    height: 250px;
-    object-fit: cover;
+    @media (min-width: 992px) {
+        text-align: start;
+    }
 }
 
 //----------------------------------------------------
@@ -410,8 +470,47 @@ svg {
     color: rgba($color-black, 0.1);
 }
 
-.splitted {
+.splitted,
+.splitted-sm,
+.splitted-md,
+.splitted-lg,
+.splitted-xl,
+.splitted-xxl {
     position: relative;
+}
+
+.splitted-none::before {
+    display: none;
+}
+
+.splitted-sm-none::before {
+    @media (min-width: 576px) {
+        display: none;
+    }
+}
+
+.splitted-md-none::before {
+    @media (min-width: 768px) {
+        display: none;
+    }
+}
+
+.splitted-lg-none::before {
+    @media (min-width: 992px) {
+        display: none;
+    }
+}
+
+.splitted-xl-none::before {
+    @media (min-width: 1200px) {
+        display: none;
+    }
+}
+
+.splitted-xxl-none::before {
+    @media (min-width: 1400px) {
+        display: none;
+    }
 }
 
 .splitted::before {
@@ -423,6 +522,67 @@ svg {
     height: 1px;
     background-color: rgba($color-black, 0.1);
 }
+
+.splitted-sm::before {
+    @media (min-width: 576px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($color-black, 0.1);
+    }
+}
+
+.splitted-md::before {
+    @media (min-width: 768px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($color-black, 0.1);
+    }
+}
+
+.splitted-lg::before {
+    @media (min-width: 992px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($color-black, 0.1);
+    }
+}
+
+.splitted-xl::before {
+    @media (min-width: 1200px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($color-black, 0.1);
+    }
+}
+
+.splitted-xxl::before {
+    @media (min-width: 1400px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($color-black, 0.1);
+    }
+}
+
 
 .cover {
     object-fit: cover;
@@ -463,7 +623,7 @@ svg {
     border-radius: 50%;
 }
 
-.expand-img>svg {
+.expand-img svg {
     transition: 0.3s;
     transform: rotate(180deg);
 }
@@ -472,8 +632,17 @@ svg {
     display: block;
 }
 
-.accordion__item.visible .expand-img>svg {
+.accordion__item.visible .expand-img svg {
     transform: rotate(0deg);
+}
+
+.accordion__item.visible .bg-light-blue {
+    background-color: $color-blue;
+}
+
+.accordion__item.visible .bg-light-blue svg {
+    transform: rotate(45deg);
+    fill: $color-white;
 }
 
 .reviews__line {
@@ -672,9 +841,13 @@ input[type=date]::-webkit-calendar-picker-indicator {
 //--------------------------------------------
 
 .messages-head {
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 702px;
     border: 1px solid rgba($color-black, 0.07);
+
+    @media (min-width: 992px) {
+        border-radius: 0.375rem;
+    }
 }
 
 .messages-head::-webkit-scrollbar {
@@ -694,6 +867,13 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border-bottom: 1px solid rgba($color-black, 0.07);
     padding-top: 15px !important;
     padding-bottom: 15px !important;
+}
+
+.messages-head__name {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .messages-head__text {
@@ -744,20 +924,30 @@ input[type=date]::-webkit-calendar-picker-indicator {
 
 .messages-body {
     height: 702px;
-    overflow: hidden;
+    overflow-y: scroll;
     padding-top: 0 !important;
+
+    @media (min-width: 992px) {
+        border-radius: 0.375rem;
+    }
+}
+
+.messages-body::-webkit-scrollbar {
+    display: none;
 }
 
 .messages-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 3rem;
-    border-top-left-radius: 0.375rem;
-    border-top-right-radius: 0.375rem;
-    background: linear-gradient(180deg, $color-white 20%, rgba(0, 0, 0, 0) 100%);
+    @media (min-width: 992px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 3rem;
+        border-top-left-radius: 0.375rem;
+        border-top-right-radius: 0.375rem;
+        background: linear-gradient(180deg, $color-white 20%, rgba(0, 0, 0, 0) 100%);
+    }
 }
 
 .messages-body__message {
@@ -803,78 +993,105 @@ input[type=date]::-webkit-calendar-picker-indicator {
 //---------------------------------------------------
 
 .slider {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	height: 530px;
-	user-select: none;
-	touch-action: pan-y;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    max-height: 530px;
+    user-select: none;
+    touch-action: pan-y;
     overflow: hidden;
 }
 
 .slider img {
-	pointer-events: none;
+    pointer-events: none;
 }
 
 .slider__list {
-	display: flex;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .slider__list.grab {
-	cursor: grab;
+    cursor: grab;
 }
 
 .slider__list.grabbing {
-	cursor: grabbing;
+    cursor: grabbing;
 }
 
 .slider__track {
-	display: flex;
-	width: 100%;
-	height: 100%;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .slide {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	justify-content: space-evenly;
-	flex-shrink: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    flex-shrink: 0;
 }
 
 .slider__arrows {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .slider__next,
 .slider__prev {
-	position: absolute;
-	top: calc(50% - 25px);
-	display: flex;
-	text-align: center;
-	justify-content: center;
-	align-items: center;
-	cursor: pointer;
+    position: absolute;
+    top: calc(50% - 25px);
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .slider__next {
-	right: 20px;
+    right: 10px;
+
+    @media (min-width: 576px) {
+        right: 20px;
+    }
 }
 
 .slider__prev {
-	left: 20px;
+    left: 10px;
+
+    @media (min-width: 576px) {
+        left: 20px;
+    }
 }
 
 .next.disabled,
 .prev.disabled {
-	opacity: .25;
-	pointer-events: none;
+    opacity: .25;
+    pointer-events: none;
 }
 
 //--------------------------------------------------
+
+.img-250 {
+    height: 75px;
+    object-fit: cover;
+
+    @media (min-width: 576px) {
+        height: 250px;
+    }
+}
+
+//--------------------------------------------------
+
+.participant-card {
+    background-color: $color-white;
+
+    @media (min-width: 768px) {
+        background-color: rgba($color-white, 0.4);
+    }
+}
