--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -174,6 +174,10 @@ select {
     fill: $color-blue;
 }
 
+.regular {
+    font-family: "Manrope regular";
+}
+
 .bold {
     font-family: "Manrope bold";
 }
