--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -830,7 +830,25 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 .object {
-    width: 340px;
+    @media (min-width: 1200px) {
+        width: 340px;
+    }
+}
+
+.add-obj__map-point {
+    border: 1px solid #dee2e6;
+
+    @media (min-width: 992px) {
+        border: none;
+    }
+}
+
+.add-obj__map-point-menu {
+    border: 1px solid #dee2e6;
+
+    @media (min-width: 1400px) {
+        border: none;
+    }
 }
 
 .calendar__date-type {
@@ -842,7 +860,6 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 .pages-selector__page {
-    width: 50px;
 }
 
 .cell {
