--- a/scss/components/main.scss
+++ b/scss/components/main.scss
@@ -587,6 +587,13 @@ svg {
     }
 }
 
+.excursion__image {
+    max-height: 125px;
+
+    @media (min-width: 1200px) {
+        max-height: 100%;
+    }
+}
 
 .cover {
     object-fit: cover;
@@ -774,10 +781,8 @@ svg {
     cursor: pointer;
 }
 
-.checkbox>input[type=checkbox] {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+input[type=checkbox] {
+    display: none;
 }
 
 .checkbox>span {
@@ -801,18 +806,42 @@ svg {
     box-shadow: 0 2px 5px 1px rgba($color-blue, 0.3);
 }
 
-.checkbox>input:checked+.custom-checkbox>.dot {
+input:checked+.custom-checkbox>.dot {
     display: block;
 }
 
-.checkbox>input:checked+.category {
+input:checked+.category {
     border: 3px solid $color-blue;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
-.checkbox>input:disabled+.category {
-    background-color: $color-white;
+input:disabled+.category {
     border: none;
+}
+
+input:checked+.collapsed-menu .menu-dots {
+    transform: rotate(90deg);
+}
+
+input:checked+.collapsed-menu .collapsed-menu__body {
+    display: block !important;
+}
+
+.menu-dots {
+    transition: 0.3s;
+    width: 30px;
+    height: 30px;
+}
+
+.menu-dot {
+    width: 5px;
+    height: 5px;
+    transition: 0.3s;
+}
+
+.collapsed-menu__body {
+    position: relative;
+    top: -30%;
+    left: -20%;
 }
 
 .destination-number {
@@ -851,11 +880,11 @@ input[type=date]::-webkit-calendar-picker-indicator {
     }
 }
 
-.calendar__date-type {
+.overflow-x-auto {
     overflow-x: auto;
 }
 
-.calendar__date-type::-webkit-scrollbar {
+.overflow-x-auto::-webkit-scrollbar {
     display: none;
 }
 
