--- a/scss/components/main-block.scss
+++ b/scss/components/main-block.scss
@@ -147,29 +147,18 @@ select {
     font-size: 0.8rem;
 }
 
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 input::placeholder {
     color: rgba($color-black, 0.3);
 }
 
 textarea {
     resize: none;
-}
-
-select {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    padding-right: 1.2em;
-    background-repeat: no-repeat;
-    background-position: top 50% right 2rem;
-    background-size: 1.2rem auto;
-}
-
-option {
-    border: none;
-    border-radius: 0.375rem;
-    background-color: $color-white;
-    padding: 1.5rem !important;
 }
 
 .bg-light-blue {
@@ -651,7 +640,7 @@ svg {
 
 .expand-img svg {
     transition: 0.3s;
-    transform: rotate(180deg);
+    transform: rotate(0deg);
 }
 
 .accordion__item.visible>.accordion__content {
@@ -659,7 +648,7 @@ svg {
 }
 
 .accordion__item.visible .expand-img svg {
-    transform: rotate(0deg);
+    transform: rotate(180deg);
 }
 
 .accordion__item.visible .bg-light-blue {
@@ -773,10 +762,116 @@ svg {
     cursor: pointer;
 }
 
+.info-icon {
+    top: -0.5rem !important;
+    right: 0;
+}
+
+//--------multiselect---------
+
+.multiselect_block svg {
+    right: 2rem;
+}
+
+.multiselect_block .expand-icon {
+    transform: rotate(0deg);
+}
+
+.form_label input,
+.field_multiselect {
+    height: 70px;
+}
+
+.form_label input::placeholder,
+.field_multiselect::placeholder {
+    color: $color-black;
+}
+
+.form_label input:focus,
+.field_multiselect:focus {
+    box-shadow: 0 0 2px rgba($color-black, 0.1);
+}
+
+.field_select {
+    z-index: 6;
+    box-shadow: 0 10px 30px 7px rgba($color-blue, 0.1);
+}
+
+.field_select[multiple] {
+    overflow-y: auto;
+}
+
+.field_select[multiple]::-webkit-scrollbar {
+    width: 3px;
+}
+
+.field_select[multiple]::-webkit-scrollbar-track {
+    background: none;
+}
+
+.field_select[multiple]::-webkit-scrollbar-thumb {
+    background-color: $color-blue;
+}
+
+.field_select option {
+    cursor: pointer;
+}
+
+.field_select option:checked,
+.field_select option:hover {
+    color: $color-blue;
+    background-color: $color-white;
+}
+
+.multiselect_label {
+    cursor: pointer;
+    z-index: 3;
+}
+
+.field_select {
+    display: none;
+
+    @media (min-width: 768px) {
+        height: 400px;
+    }
+}
+
+.multiselect_checkbox:checked~.field_select {
+    display: block;
+}
+
+.multiselect_checkbox:checked~.expand-icon {
+    transform: rotate(180deg);
+}
+
+//-----------------------------
+
+//--------simpleselect---------
+
+
+
+//-----------------------------
+
+.expand-icon {
+    width: 25px;
+    height: 25px;
+    transition: 0.3s;
+
+    @media (min-width: 992px) {
+        width: 20px;
+        height: 20px;
+    }
+}
+
 .add-main-photo {
-    width: 180px;
-    height: 100px;
+    width: 100%;
+    height: 150px;
     object-fit: cover;
+
+    @media (min-width: 992px) {
+        width: 180px;
+        height: 100px;
+    }
 }
 
 .add-additional-photo {
@@ -831,8 +926,24 @@ input[type=checkbox] {
     box-shadow: 0 2px 5px 1px rgba($color-blue, 0.3);
 }
 
-input:checked+.custom-checkbox>.dot {
+input:checked+label .dot {
     display: block;
+}
+
+input:checked+label input {
+    display: block !important;
+}
+
+input:checked+label+input+label+input {
+    display: block !important;
+}
+
+input:checked+label+input+div[name=add-exc-photo] {
+    display: block !important;
+}
+
+input:checked+label+.discount-block {
+    display: flex !important;
 }
 
 input:checked+.category {
@@ -875,8 +986,6 @@ input:checked+.collapsed-menu .collapsed-menu__body {
 .collapsed-menu {
     transition: 0.3s;
 }
-
-.collapsed-menu__body {}
 
 .destination-number {
     margin-top: 2.7rem;
