--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@ $prefix: "mo-";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
+@import "../node_modules/bootstrap/scss/dropdown";
 @import "../node_modules/bootstrap/scss/utilities/api";
 
 // Reset SCSS
@@ -28,4 +29,4 @@ $prefix: "mo-";
 @import "components/header";
 @import "components/footer";
 @import "components/travel-card";
-@import "components/main";
+@import "components/main-block";
