--- a/scss/base/preheader.scss
+++ b/scss/base/preheader.scss
@@ -33,7 +33,8 @@
         font-family: $font-family-bold;
         color: $color-white;
         text-align: center;
-        margin-bottom: 25px;
+        line-height: 20pt;
+        //margin-bottom: 25px;
       }
 
       &__tags {
@@ -163,10 +164,15 @@
         }
 
         &__photos {
+          margin-bottom: 150px;
           & .dt-photos__item {
             width: 90px;
             height: 90px;
           }
+        }
+
+        &__avatar {
+          margin-bottom: 150px;
         }
 
         &__view-reviews {
