--- a/scss/components/reviews.scss
+++ b/scss/components/reviews.scss
@@ -8,6 +8,14 @@
       font-family: $font-family-semibold;
       font-size: 14px;
     }
+
+    & .dt-rating-of {
+      font-size: 20px;
+    }
+
+    & .dt-count-marks {
+      font-size: 14px;
+    }
   }
 
   &__rating {
@@ -137,6 +145,17 @@
     &__sort-by {
       justify-content: space-between !important;
     }
+
+    &__header {
+      & .dt-rating-of {
+        font-size: 16px;
+      }
+
+      & .dt-count-marks {
+        font-size: 12px;
+      }
+    }
+
     &__content {
       & .dt-review {
         &__item {
@@ -153,6 +172,27 @@
           min-height: 45px;
           height: 45px;
         }
+
+        &__photos {
+          & .dt-photos__item {
+            width: 50px;
+            height: 50px;
+          }
+        }
+
+        &__header {
+          & .dt-user__date-ago {
+            font-size: 10px;
+          }
+
+          & .dt-user__name {
+            font-size: 12px;
+          }
+        }
+      }
+
+      & button {
+        margin-bottom: 40px;
       }
     }
   }
