--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,7 @@ body {
   color: $color-black;
   font-family: $font-family-regular !important;
   letter-spacing: 0.25px;
+  //line-height: 20pt;
 }
 
 .container {
